--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
                     <div class="col-md-4">
                         <img src="imgs/port1.png" alt="img">
                         <h2>Back-End</h2>
-                        <p>Linguagens de Programação e Ferramentas (ES6, Nodejs, MongoDB, Rest, Express) que eu conheço no momento para criar sistemas mais complexos e resolver o que mais for preciso.</p>
+                        <p>ES6, Nodejs, MongoDB, Rest, Express, Git.</p>
                     </div>
                     <div class="col-md-4">
                         <img src="imgs/port2.png" alt="img">
                         <h2>Front-End</h2>
-                        <p>Linguagens de Marcação e bibliotecas (HTML5, CSS3, ES6, Bootstrap), para criar o View perfeito para o usuário final.</p>
+                        <p>HTML5, CSS3, ES6, Bootstrap, Quasar, Vue, Vuex, Vue-router, Lodash, VeeValidate.</p>
                     </div>
                     <div class="col-md-4">
                         <img src="imgs/port3.png" alt="Img">
                         <h2>Design</h2>
-                        <p>Conhecimentos em: CorelDraw, Photoshop, Illustrator, Lightroom, Fotografia.</p>
+                        <p>CorelDraw, Photoshop, Illustrator, Lightroom, Fotografia.</p>
                     </div>
                 </div>
             </section>
@@ -53,7 +53,7 @@
             <img src="imgs/perfil3.png" alt="imagem">
             <p>Do ano de 1998, sou programador porém durante toda a adolescência trabalhei como fotógrafo de eventos e editando imagens até que ingressei na instituição UniFOA em 2016 e iniciei no Curso de Sistemas de Informação, onde estou agora cursando
                 o segundo. No momento estou me especializando em tecnologias back-end como NodeJS, Rest, Express e Mongo. No tempo livre gosto de ler livros, ouvir música, praticar esportes ou assistir filmes e séries(de preferencia em ingles), um estudo
-                paralelo é o do idioma inglês que curso no CCAA e que estou na metade também.
+                paralelo é o do idioma inglês que curso no CCAA e que estou na metade.
             </p>
 
             <h3>Curriculo</h3>
@@ -77,7 +77,7 @@
                         <a href="https://github.com/paoru5444"><img src="icones/git.png" alt="" class="midias"></a>
                     </li>
                 </ul>
-                <p>Email: betinho5444@gmail.com</p>
+                <p>Email: paulo.pereira.dev@gmail.com</p>
                 <p>Contato: (24) 98805 9308</p>
             </div>
         </div>
