--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h1 class="titulo-sobre"><strong>Sobre</strong></h1>
     <div id="Sobre">
         <div id="Sobre-interno">
-            <img src="imgs/perfil3.png" alt="imagem">
+            <img src="imgs/23662972.jpg" alt="imagem">
             <p>Do ano de 1998, sou programador porém durante toda a adolescência trabalhei como fotógrafo de eventos e editando imagens até que ingressei na instituição UniFOA em 2016 e iniciei no Curso de Sistemas de Informação, onde estou agora cursando
                 o segundo. No momento estou me especializando em tecnologias back-end como NodeJS, Rest, Express e Mongo. No tempo livre gosto de ler livros, ouvir música, praticar esportes ou assistir filmes e séries(de preferencia em ingles), um estudo
                 paralelo é o do idioma inglês que curso no CCAA e que estou na metade.
