--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
     <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/estilo.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
     <title>Paulo Roberto</title>
 </head>
 
 <body>
     <div id="topo">
-        <div id="topo-interno">
-            <div id="logo">
-                <a href="html.html"><img src="imgs/logo3.png" alt="imagem"></a>
+        <div class="row" id="topo-interno">
+            <div class="col-md-12" id="logo">
+                <span style="font-size: 1.3em; font-family: 'Lobster Two', cursive;">Paulo Roberto</span>
             </div>
-
-
         </div>
     </div>
     <h2 class="titulo-portifolio"><b>Portifólio</b></h2>
