--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="topo">
         <div class="row" id="topo-interno">
             <div class="col-md-12" id="logo">
-                <span style="font-size: 1.3em; font-family: 'Lobster Two', cursive;">Paulo Roberto</span>
+                <span style="font-size: 2.3em; font-family: 'Lobster Two', cursive; color: #fff" align="center">Paulo Roberto</span>
             </div>
         </div>
     </div>
