--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <body>
     <div id="topo">
-        <div class="row" id="topo-interno">
-            <div class="col-md-12" id="logo">
-                <span style="font-size: 2.3em; font-family: 'Lobster Two', cursive; color: #fff" align="center">Paulo Roberto</span>
+        <div id="topo-interno">
+            <div id="logo">
+                <h1 style="font-size: 3.3em; font-family: 'Lobster Two', cursive; color: #fff" align="center">Paulo Roberto</h1>
             </div>
         </div>
     </div>
