--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
     <div id="topo">
         <div id="topo-interno">
             <div id="logo">
-                <h1 style="font-size: 3.3em; font-family: 'Lobster Two', cursive; color: #fff" align="center">Paulo Roberto</h1>
+                <h1 style="font-size: 36px; font-family: 'Lobster Two', cursive; color: #fff" align="center">Olá, me chamo Paulo Roberto, conheça um pouco mais sobre mim abaixo!</h1>
             </div>
         </div>
     </div>
-    <h2 class="titulo-portifolio"><b>Portifólio</b></h2>
     <div id="site">
         <div id="site-interno">
             <section>
-
                 <div class="row">
                     <div class="col-md-4">
                         <img src="imgs/port1.png" alt="img">
