--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="topo">
         <div id="topo-interno">
             <div id="logo">
-                <h1 style="font-size: 36px; font-family: 'Lobster Two', cursive; color: #fff" align="center">Olá, me chamo Paulo Roberto, conheça um pouco mais sobre mim abaixo!</h1>
+                <h1 style="font-size: 52px; font-family: 'Lobster Two', cursive; color: #fff" align="center">Olá, me chamo Paulo Roberto, conheça um pouco mais sobre mim abaixo!</h1>
             </div>
         </div>
     </div>
@@ -53,7 +53,7 @@
             </p>
 
             <h3>Curriculo</h3>
-            <p><a href="Curriculo.pdf" download="Curriculo">Clique aqui para efetuar o download</a></p>
+            <p><a href="PauloRoberto-Desenvolvedor-Estagio.pdf" download="Curriculo">Clique aqui para efetuar o download</a></p>
         </div>
     </div>
 
