--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="topo">
         <div id="topo-interno">
             <div id="logo">
-                <h1 style="font-size: 52px; font-family: 'Lobster Two', cursive; color: #fff" align="center">Olá, me chamo Paulo Roberto, conheça um pouco mais sobre mim abaixo!</h1>
+                <h1 style="font-size: 36px; font-family: 'Lobster Two', cursive; color: #fff; margin-top: 0; vertical-align: center" align="center">Olá, me chamo Paulo Roberto, conheça um pouco mais sobre mim abaixo!</h1>
             </div>
         </div>
     </div>
